--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+     "moduleResolution": "node",
+     "resolveJsonModule": true,
+     "types": ["node"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
