--- a/package.json
+++ b/package.json
@@ -31,19 +31,19 @@
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.0",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "typeorm": "^0.3.25"
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.1",
+    "@types/node": "^24.3.0",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.14.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.26",
     "typescript": "^5.8.3"
   }
 }
